--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "mongoose": "^7.0.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
     "cors": "^2.8.5",
   },
   "devDependencies": {
