--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "react-toastify": "^10.0.5",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
